fix(WebexMember): set higher font color contrast for "guest" role

--- a/src/components/WebexMember/WebexMember.scss
+++ b/src/components/WebexMember/WebexMember.scss
@@ -24,7 +24,7 @@
     margin-top: 0.063rem;
 
     .guest {
-      color: $wxc-gray-70;
+      color: var(--wxc-secondary-text-color);
     }
   }
 
